fix(AV-1580): Still adjust horizontal spacing on guide menu items

--- a/src/less/drupal/menu.less
+++ b/src/less/drupal/menu.less
@@ -21,6 +21,9 @@
     position: relative;
     padding-left: @padding-left__nav--guide;
     margin-top: 0;
+    margin-bottom: 0;
+    padding-top: @padding-y__nav__item__link--guide;
+    padding-bottom: @padding-y__nav__item__link--guide;
 
     &::before {
       content: "\f111";
@@ -53,7 +56,7 @@
       display: block;
       position: relative;
       counter-increment: guide-nav;
-      margin: 15px 0;
+      margin: 5px 0;
 
       &::before {
         content: counter(guide-nav) ".";
@@ -77,8 +80,9 @@
       }
 
       &.open {
-        &:not(:first-of-type) {
-          margin-top: 25px;
+        &:not(:first-of-type),
+        & + .nav__item {
+          margin-top: 15px;
         }
 
         a {
